added login and register views and shop main page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+#logging.level.root=DEBUG
 
+spring.output.ansi.enabled=ALWAYS
+
+spring.h2.console.enabled=true
+
+spring.sql.init.mode=always
+
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.show-sql=true
+
+# turn off in prod
+spring.jpa.properties.format_sql=true
+
+spring.jpa.properties.hibernate.connection.isolation=2
+spring.jpa.defer-datasource-initialization=true
+
+logging.level.org.hibernate.stat=debug
+logging.level.org.hibernate.type=trace
